# News-Kanji-Extractor

./: .gitignore  CLAUDE.md  LICENSE  README.md  conftest.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
kanji_extractor/: __init__.py  extractor.py  scraper.py  writer.py
tests/: test_extractor.py  test_writer.py
