[project]
name = "gi-kobun-maker"
version = "0.1.0"
description = "Kanji/kobun extraction and generation tool"
authors = [
    {name = "QuQuLa89"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "requests (>=2.31,<3)",
    "beautifulsoup4 (>=4.12,<5)",
    "newspaper3k (>=0.2.8,<0.3)",
    "lxml (>=4.9)",
    "lxml-html-clean (>=0.1.1)",
    "openpyxl (>=3.1,<4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.0)"
]
